# BinaryTreeEditor

./: CMakeLists.txt
res/: resources.qrc
src/: main.cpp
src/gui/: customgraphicsview.cpp  customgraphicsview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintview.cpp  paintview.h  paintwidget.cpp  paintwidget.h  paintwidget.ui  treenodeitem.cpp  treenodeitem.h  treescene.cpp  treescene.h  treeview.cpp  treeview.h
src/models/: binarytree.cpp  binarytree.h
src/utils/: jsonserializer.cpp  jsonserializer.h  utils.h
